--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mcp-server-initiator",
   "displayName": "MCP Server Initiator",
   "description": "Create MCP server folder structure with MVC pattern",
-  "version": "0.0.1",
-  "publisher": "your-publisher-name",
+  "version": "0.0.2",
+  "publisher": "jason-shen",
   "engines": {
     "vscode": "^1.74.0"
   },
